<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToOutline="true"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/frame_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <TextView
                android:id="@+id/usershould"
                android:layout_width="320dp"
                android:layout_height="124dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/user_should"
                android:textAppearance="@style/user_should" />

            <TextView
                android:id="@+id/suggested_d"
                android:layout_width="190dp"
                android:layout_height="29dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="140dp"
                android:gravity="top"
                android:text="@string/suggested_doc"
                android:textAppearance="@style/suggested_d" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/suggested_d"
                android:layout_marginTop="18dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="49dp"
                    android:layout_height="27dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="112dp"
                    android:gravity="top"
                    android:text="@string/name_"
                    android:textAppearance="@style/name" />

                <View
                    android:id="@+id/ellipse_1"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="27dp"
                    android:layout_marginTop="27dp"
                    android:background="@drawable/ellipse_1" />

                <View
                    android:id="@+id/rectangle_1"
                    android:layout_width="270dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="43dp"
                    android:background="@drawable/rectangle_9" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/suggested_d"
                android:layout_marginTop="150dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/name2"
                    android:layout_width="49dp"
                    android:layout_height="27dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="112dp"
                    android:gravity="top"
                    android:text="@string/name_"
                    android:textAppearance="@style/name" />

                <View
                    android:id="@+id/ellipse_2"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="27dp"
                    android:layout_marginTop="27dp"
                    android:background="@drawable/ellipse_1" />

                <View
                    android:id="@+id/rectangle_2"
                    android:layout_width="270dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="43dp"
                    android:background="@drawable/rectangle_9" />

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/rectangle_8"
                android:layout_width="362dp"
                android:layout_height="322dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="130dp"
                android:background="@drawable/rectangle_8" />

            <TextView
                android:id="@+id/report"
                android:layout_width="335dp"
                android:layout_height="46dp"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/rectangle_3"
                android:layout_marginTop="20dp"
                android:text="@string/report"
                android:textAppearance="@style/report"
                android:gravity="center_horizontal|top"
                />

            <TextView
                android:id="@+id/name3"
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/rectangle_4"
                android:layout_alignLeft="@id/rectangle_4"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/name_"
                android:textAppearance="@style/name_3"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/Age_text"
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/name3"
                android:layout_alignLeft="@id/rectangle_4"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="28dp"
                android:text="@string/age_text"
                android:textAppearance="@style/name_3"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/Gender_text"
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/Age_text"
                android:layout_alignLeft="@id/rectangle_4"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="28dp"
                android:text="@string/gender_text"
                android:textAppearance="@style/name_3"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/RecentReport_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignTop="@id/Gender_text"
                android:layout_alignLeft="@id/rectangle_4"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="36dp"
                android:text="@string/past_reports_amp_treatments"
                android:textAppearance="@style/name_3"
                android:gravity="top"
                />


            <View
                android:id="@+id/rectangle_4"
                android:layout_width="324dp"
                android:layout_height="174dp"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/report"
                android:layout_marginTop="60dp"
                android:background="@drawable/rectangle_3"
                />


            <TextView
                android:id="@+id/Potentialilness_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignTop="@id/rectangle_6"
                android:layout_alignLeft="@id/rectangle_6"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/potential_illness"
                android:textAppearance="@style/name_3"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/Potential_Symptoms_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignTop="@id/Potentialilness_text"
                android:layout_alignLeft="@id/rectangle_6"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="28dp"
                android:text="@string/potential_symptoms"
                android:textAppearance="@style/name_3"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/symptom_1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignTop="@id/Potential_Symptoms_text"
                android:layout_alignLeft="@id/rectangle_6"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="28dp"
                android:text="@string/symptom_1"
                android:textAppearance="@style/name_3"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/symptom_2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignTop="@id/symptom_1"
                android:layout_alignLeft="@id/rectangle_6"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="36dp"
                android:text="@string/symptom_2"
                android:textAppearance="@style/name_3"
                android:gravity="top"
                />


            <View
                android:id="@+id/rectangle_6"
                android:layout_width="324dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/rectangle_4"
                android:layout_marginTop="210dp"
                android:background="@drawable/rectangle_3"
                />

            <View
                android:id="@+id/rectangle_3"
                android:layout_width="350dp"
                android:layout_height="593dp"
                android:layout_alignTop="@id/cardview2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="200dp"
                android:background="@drawable/rectangle_3" />


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>